src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A02.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A02Invalid {

}